Bug 289287 - kmail's views are EMPTY and upon closing kmail, it crashes
Summary: kmail's views are EMPTY and upon closing kmail, it crashes
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: libakonadi (other bugs)
Version First Reported In: 4.8
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 293241 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-18 15:32 UTC by thomas gahr
Modified: 2012-02-16 08:45 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
screenshot of kmail (kontact) before crash (95.45 KB, image/png)
2011-12-18 15:34 UTC, thomas gahr
Details
New crash information added by DrKonqi (13.27 KB, text/plain)
2012-01-02 00:17 UTC, Thiago Macieira
Details
New crash information added by DrKonqi (11.06 KB, text/plain)
2012-02-12 16:06 UTC, thomas gahr
Details
New crash information added by DrKonqi (13.79 KB, text/plain)
2012-02-16 04:51 UTC, Craig Magina
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thomas gahr 2011-12-18 15:32:46 UTC
Application: kontact (4.8 beta2)
KDE Platform Version: 4.7.90 (4.8 Beta2 (4.7.90)
Qt Version: 4.8.0
Operating System: Linux 3.1.5-2.fc16.x86_64 x86_64
Distribution: "Fedora release 16 (Verne)"

-- Information about the crash:
- What I was doing when the application crashed:
Closed it via ctrl+q.
Not running kmail as standalone but within kontact

- Unusual behavior I noticed:
All of kmail's views where empty - nothing in the folder view and nothing in the messagelist view or message view. Absolutely nothing.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f570d2ef840 (LWP 16960))]

Thread 3 (Thread 0x7f5700f44700 (LWP 16961)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:165
#1  0x0000003c72d973cc in WTF::TCMalloc_PageHeap::scavengerThread (this=0x3c73790f80) at ../../../Source/JavaScriptCore/wtf/FastMalloc.cpp:2495
#2  0x0000003c72d974f9 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../../../Source/JavaScriptCore/wtf/FastMalloc.cpp:1618
#3  0x0000003ce4207d90 in start_thread (arg=0x7f5700f44700) at pthread_create.c:309
#4  0x0000003ce36ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f5700643700 (LWP 16962)):
#0  timerSourcePrepare (source=0x176f1f0, timeout=0x7f5700642bac) at kernel/qeventdispatcher_glib.cpp:166
#1  0x0000003ce5244012 in g_main_context_prepare (context=0x176e4b0, priority=0x7f5700642c18) at gmain.c:2746
#2  0x0000003ce5244e1d in g_main_context_iterate (context=0x176e4b0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3053
#3  0x0000003ce524544c in g_main_context_iteration (context=0x176e4b0, may_block=1) at gmain.c:3136
#4  0x0000003c67ba83b6 in QEventDispatcherGlib::processEvents (this=0x176e3c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003c67b78772 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003c67b789c7 in QEventLoop::exec (this=0x7f5700642d40, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003c67a78b27 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x0000003c67a7bb6b in QThreadPrivate::start (arg=0x19dd9e0) at thread/qthread_unix.cpp:298
#9  0x0000003ce4207d90 in start_thread (arg=0x7f5700643700) at pthread_create.c:309
#10 0x0000003ce36ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f570d2ef840 (LWP 16960)):
[KCrash Handler]
#6  0x0000003c7cedb140 in operator bool (this=0x50) at /usr/include/kde4/ksharedptr.h:106
#7  KMKernel::config (this=0x1f5cda0) at /usr/src/debug/kdepim-4.7.90/kmail/kmkernel.cpp:1442
#8  0x0000003c7cedb967 in KMKernel::slotSyncConfig (this=0x1f5cda0) at /usr/src/debug/kdepim-4.7.90/kmail/kmkernel.cpp:1323
#9  0x0000003c7cee782a in KMKernel::qt_static_metacall (_o=0x1f5cda0, _c=<optimized out>, _id=<optimized out>, _a=0x1912d60) at /usr/src/debug/kdepim-4.7.90/x86_64-redhat-linux-gnu/kmail/kmkernel.moc:175
#10 0x0000003c67b92506 in QObject::event (this=0x1f5cda0, e=<optimized out>) at kernel/qobject.cpp:1195
#11 0x0000003c681c9994 in notify_helper (e=0x2267f10, receiver=0x1f5cda0, this=0x175c060) at kernel/qapplication.cpp:4550
#12 QApplicationPrivate::notify_helper (this=0x175c060, receiver=0x1f5cda0, e=0x2267f10) at kernel/qapplication.cpp:4522
#13 0x0000003c681ce813 in QApplication::notify (this=0x7fff7747fa10, receiver=0x1f5cda0, e=0x2267f10) at kernel/qapplication.cpp:4411
#14 0x0000003c6a650766 in KApplication::notify (this=0x7fff7747fa10, receiver=0x1f5cda0, event=0x2267f10) at /usr/src/debug/kdelibs-4.7.90/kdeui/kernel/kapplication.cpp:311
#15 0x0000003c67b7963c in QCoreApplication::notifyInternal (this=0x7fff7747fa10, receiver=0x1f5cda0, event=0x2267f10) at kernel/qcoreapplication.cpp:876
#16 0x0000003c67b7d0ca in sendEvent (event=0x2267f10, receiver=0x1f5cda0) at kernel/qcoreapplication.h:231
#17 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x17216d0) at kernel/qcoreapplication.cpp:1500
#18 0x0000003c67ba7f23 in sendPostedEvents () at kernel/qcoreapplication.h:236
#19 postEventSourceDispatch (s=0x175e990) at kernel/qeventdispatcher_glib.cpp:279
#20 0x0000003ce5244a7d in g_main_dispatch (context=0x175e8a0) at gmain.c:2425
#21 g_main_context_dispatch (context=0x175e8a0) at gmain.c:2995
#22 0x0000003ce5245278 in g_main_context_iterate (context=0x175e8a0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3073
#23 0x0000003ce524544c in g_main_context_iteration (context=0x175e8a0, may_block=1) at gmain.c:3136
#24 0x0000003c67ba834f in QEventDispatcherGlib::processEvents (this=0x17230a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#25 0x0000003c6826c5fe in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#26 0x0000003c67b78772 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x0000003c67b789c7 in QEventLoop::exec (this=0x7fff7747df60, flags=...) at kernel/qeventloop.cpp:204
#28 0x0000003c6868f806 in QDialog::exec (this=0x2023b50) at dialogs/qdialog.cpp:552
#29 0x0000003c6a5ba22a in KMessageBox::createKMessageBox (dialog=0x2023b50, icon=<optimized out>, text=..., strlist=<optimized out>, ask=..., checkboxReturn=0x0, options=..., details=..., notifyType=QMessageBox::Critical) at /usr/src/debug/kdelibs-4.7.90/kdeui/dialogs/kmessagebox.cpp:344
#30 0x0000003c6a5ba992 in KMessageBox::createKMessageBox (dialog=0x2023b50, icon=QMessageBox::Critical, text=..., strlist=..., ask=..., checkboxReturn=0x0, options=..., details=...) at /usr/src/debug/kdelibs-4.7.90/kdeui/dialogs/kmessagebox.cpp:159
#31 0x0000003c6a5bb5db in KMessageBox::errorListWId (parent_id=0, text=..., strlist=..., caption=..., options=...) at /usr/src/debug/kdelibs-4.7.90/kdeui/dialogs/kmessagebox.cpp:854
#32 0x0000003c6a5bb795 in KMessageBox::error (parent=<optimized out>, text=..., caption=..., options=<optimized out>) at /usr/src/debug/kdelibs-4.7.90/kdeui/dialogs/kmessagebox.cpp:821
#33 0x0000003c73d0bd40 in Akonadi::EntityTreeModelPrivate::fetchJobDone (this=0x2026260, job=0x20191e0) at /usr/src/debug/kdepimlibs-4.7.90/akonadi/entitytreemodel_p.cpp:1204
#34 0x0000003c67b8d2d1 in QMetaObject::activate (sender=0x20191e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff7747e890) at kernel/qobject.cpp:3547
#35 0x0000003c69f41d92 in KJob::result (this=<optimized out>, _t1=0x20191e0) at /usr/src/debug/kdelibs-4.7.90/x86_64-redhat-linux-gnu/kdecore/kjob.moc:208
#36 0x0000003c69f41dd0 in KJob::emitResult (this=0x20191e0) at /usr/src/debug/kdelibs-4.7.90/kdecore/jobs/kjob.cpp:312
#37 0x0000003c69f41e7e in KJob::kill (this=0x20191e0, verbosity=KJob::EmitResult) at /usr/src/debug/kdelibs-4.7.90/kdecore/jobs/kjob.cpp:112
#38 0x0000003c73d79c67 in Akonadi::Session::clear (this=0x2023410) at /usr/src/debug/kdepimlibs-4.7.90/akonadi/session.cpp:425
#39 0x0000003c73d7a00b in Akonadi::Session::~Session (this=0x2023410, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.7.90/akonadi/session.cpp:394
#40 0x0000003c73d7a059 in Akonadi::Session::~Session (this=0x2023410, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.7.90/akonadi/session.cpp:396
#41 0x0000003c67b8b985 in QObjectPrivate::deleteChildren (this=0x1f44920) at kernel/qobject.cpp:1908
#42 0x0000003c67b91c5c in QObject::~QObject (this=0x1f5cda0, __in_chrg=<optimized out>) at kernel/qobject.cpp:927
#43 0x0000003c7cee07cd in KMKernel::~KMKernel (this=0x1f5cda0, __in_chrg=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kmail/kmkernel.cpp:226
#44 0x0000003c7cee0939 in KMKernel::~KMKernel (this=0x1f5cda0, __in_chrg=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kmail/kmkernel.cpp:236
#45 0x00007f56bc60b745 in KMailPart::~KMailPart (this=0x1decf00, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kmail/kmail_part.cpp:138
#46 0x00007f56bc60b839 in KMailPart::~KMailPart (this=0x1decf00, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kmail/kmail_part.cpp:140
#47 0x0000003c79611a4e in KontactInterface::Plugin::~Plugin (this=0x1d97290, __vtt_parm=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.7.90/kontactinterface/plugin.cpp:90
#48 0x00007f56bd5abc8f in KMailPlugin::~KMailPlugin (this=0x1d97290, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kontact/plugins/kmail/kmail_plugin.cpp:159
#49 0x00007f56bd5abcb9 in KMailPlugin::~KMailPlugin (this=0x1d97290, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kontact/plugins/kmail/kmail_plugin.cpp:163
#50 0x0000003c6e21c307 in Kontact::MainWindow::~MainWindow (this=0x19cccf0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kontact/src/mainwindow.cpp:288
#51 0x0000003c6e21c479 in Kontact::MainWindow::~MainWindow (this=0x19cccf0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.7.90/kontact/src/mainwindow.cpp:290
#52 0x0000003c67b92538 in QObject::event (this=0x19cccf0, e=<optimized out>) at kernel/qobject.cpp:1176
#53 0x0000003c68219a5b in QWidget::event (this=0x19cccf0, event=0x350d3b0) at kernel/qwidget.cpp:8820
#54 0x0000003c685eb4db in QMainWindow::event (this=0x19cccf0, event=0x350d3b0) at widgets/qmainwindow.cpp:1478
#55 0x0000003c6a74c3a8 in KXmlGuiWindow::event (this=0x19cccf0, ev=0x350d3b0) at /usr/src/debug/kdelibs-4.7.90/kdeui/xmlgui/kxmlguiwindow.cpp:126
#56 0x0000003c681c9994 in notify_helper (e=0x350d3b0, receiver=0x19cccf0, this=0x175c060) at kernel/qapplication.cpp:4550
#57 QApplicationPrivate::notify_helper (this=0x175c060, receiver=0x19cccf0, e=0x350d3b0) at kernel/qapplication.cpp:4522
#58 0x0000003c681ce813 in QApplication::notify (this=0x7fff7747fa10, receiver=0x19cccf0, e=0x350d3b0) at kernel/qapplication.cpp:4411
#59 0x0000003c6a650766 in KApplication::notify (this=0x7fff7747fa10, receiver=0x19cccf0, event=0x350d3b0) at /usr/src/debug/kdelibs-4.7.90/kdeui/kernel/kapplication.cpp:311
#60 0x0000003c67b7963c in QCoreApplication::notifyInternal (this=0x7fff7747fa10, receiver=0x19cccf0, event=0x350d3b0) at kernel/qcoreapplication.cpp:876
#61 0x0000003c67b7d0ca in sendEvent (event=0x350d3b0, receiver=0x19cccf0) at kernel/qcoreapplication.h:231
#62 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x17216d0) at kernel/qcoreapplication.cpp:1500
#63 0x0000003c67ba7f23 in sendPostedEvents () at kernel/qcoreapplication.h:236
#64 postEventSourceDispatch (s=0x175e990) at kernel/qeventdispatcher_glib.cpp:279
#65 0x0000003ce5244a7d in g_main_dispatch (context=0x175e8a0) at gmain.c:2425
#66 g_main_context_dispatch (context=0x175e8a0) at gmain.c:2995
#67 0x0000003ce5245278 in g_main_context_iterate (context=0x175e8a0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3073
#68 0x0000003ce524544c in g_main_context_iteration (context=0x175e8a0, may_block=1) at gmain.c:3136
#69 0x0000003c67ba834f in QEventDispatcherGlib::processEvents (this=0x17230a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#70 0x0000003c6826c5fe in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#71 0x0000003c67b78772 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#72 0x0000003c67b789c7 in QEventLoop::exec (this=0x7fff7747f9a0, flags=...) at kernel/qeventloop.cpp:204
#73 0x0000003c67b7d3c5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#74 0x00000000004036e9 in main (argc=1, argv=0x7fff77480038) at /usr/src/debug/kdepim-4.7.90/kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 thomas gahr 2011-12-18 15:34:07 UTC
Created attachment 66869 [details]
screenshot of kmail (kontact) before crash

This screenshot shows the broken kmail that crashes when closing
Comment 2 thomas gahr 2011-12-18 15:38:57 UTC
After logging out and back in the behaviour is gone. KMail works as expected, both in kontact and as standalone.
Comment 3 Thiago Macieira 2012-01-02 00:17:47 UTC
Created attachment 67316 [details]
New crash information added by DrKonqi

kontact (4.8 beta2) on KDE Platform 4.7.4 (4.7.4) using Qt 4.8.0

Same situation: some folders were empty and the folder icons where the "spinning wheel" distraction indicating that KMail was working. I am also using it inside Kontact. When I Ctrl+Q'ed the application so I could stop and restart akonadi, KMail crashed with the same backtrace.

-- Backtrace (Reduced):
#6  0x00007f979948c560 in operator bool (this=0x50) at /home/thiago/kde/include/ksharedptr.h:106
#7  KMKernel::config (this=0x1d917b0) at /home/thiago/src/kde4/kdepim/kmail/kmkernel.cpp:1440
#8  0x00007f979948cce7 in KMKernel::slotSyncConfig (this=0x1d917b0) at /home/thiago/src/kde4/kdepim/kmail/kmkernel.cpp:1321
#9  0x00007f9799498fb5 in KMKernel::qt_static_metacall (_o=0x1d917b0, _c=<optimized out>, _id=<optimized out>, _a=0x228c270) at /home/thiago/obj/kde4/kdepim/kmail/kmkernel.moc:175
[...]
#11 0x00007f97f14be78f in QObject::event (this=0x1d917b0, e=0x21043e0) at /home/thiago/src/qt/qt-4.8/src/corelib/kernel/qobject.cpp:1195
Comment 4 thomas gahr 2012-02-12 16:06:15 UTC
Created attachment 68730 [details]
New crash information added by DrKonqi

kontact (4.8.0) on KDE Platform 4.8.00 (4.8.0 using Qt 4.8.0

- What I was doing when the application crashed:
Closed Kontact

- Unusual behavior I noticed:
KMail could not open any mails, showing "Retrieving folder contents" only

Happens often, restarting Kontact does not change anything.
Restarting Akonadi makes the behaviour go a away. Note: restarting akonadi takes very long (about 1-2 minutes)

-- Backtrace (Reduced):
#6  0x00000032c98dae10 in operator bool (this=0x50) at /usr/include/kde4/ksharedptr.h:106
#7  KMKernel::config (this=0x1c69ac0) at /usr/src/debug/kdepim-4.8.0/kmail/kmkernel.cpp:1442
#8  0x00000032c98db637 in KMKernel::slotSyncConfig (this=0x1c69ac0) at /usr/src/debug/kdepim-4.8.0/kmail/kmkernel.cpp:1323
#9  0x00000032c98e751a in KMKernel::qt_static_metacall (_o=0x1c69ac0, _c=<optimized out>, _id=<optimized out>, _a=0x20d1540) at /usr/src/debug/kdepim-4.8.0/x86_64-redhat-linux-gnu/kmail/kmkernel.moc:175
#10 0x00000034a0b91f16 in QObject::event (this=0x1c69ac0, e=<optimized out>) at kernel/qobject.cpp:1195
Comment 5 Christophe Marin 2012-02-13 10:31:08 UTC
*** Bug 293241 has been marked as a duplicate of this bug. ***
Comment 6 Craig Magina 2012-02-16 04:51:03 UTC
Created attachment 68842 [details]
New crash information added by DrKonqi

kontact (4.8.0) on KDE Platform 4.8.00 (4.8.0 using Qt 4.8.0

- What I was doing when the application crashed:
I closed kontact/kmail with ctrl+q and it crashed. The folders of my imap account were all empty and akonadi was in the process of syncing the account.

-- Backtrace (Reduced):
#6  0x00007f39dc818600 in operator bool (this=0x50) at /usr/include/ksharedptr.h:106
#7  KMKernel::config (this=0x2ab43a0) at ../../kmail/kmkernel.cpp:1440
#8  0x00007f39dc818e27 in KMKernel::slotSyncConfig (this=0x2ab43a0) at ../../kmail/kmkernel.cpp:1321
#9  0x00007f39dc824cda in KMKernel::qt_static_metacall (_o=0x2ab43a0, _c=<optimized out>, _id=<optimized out>, _a=0x2a0b5b0) at ./kmkernel.moc:175
#10 0x00007f3a400739c6 in QObject::event (this=0x2ab43a0, e=<optimized out>) at kernel/qobject.cpp:1195
Comment 7 Laurent Montel 2012-02-16 08:44:00 UTC
Git commit 6bda7ef36bf9e4300ebacd9d199d65970cc33654 by Montel Laurent.
Committed on 16/02/2012 at 09:43.
Pushed by mlaurent into branch 'master'.

Fix Bug 289287 - kmail's views are EMPTY and upon closing kmail, it crashes

FIXED-IN: 4.8.1

M  +3    -3    kmail/kmmainwidget.cpp
M  +1    -1    kmail/kmmainwidget.h

http://commits.kde.org/kdepim/6bda7ef36bf9e4300ebacd9d199d65970cc33654
Comment 8 Laurent Montel 2012-02-16 08:44:53 UTC
Git commit d09775152c969c209ad9dd6877b9c81e2a27254f by Montel Laurent.
Committed on 16/02/2012 at 09:43.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 289287 - kmail's views are EMPTY and upon closing kmail, it crashes

FIXED-IN: 4.8.1
(cherry picked from commit 6bda7ef36bf9e4300ebacd9d199d65970cc33654)

M  +3    -3    kmail/kmmainwidget.cpp
M  +1    -1    kmail/kmmainwidget.h

http://commits.kde.org/kdepim/d09775152c969c209ad9dd6877b9c81e2a27254f