Fix Bug 289287 - kmail's views are EMPTY and upon closing kmail, it crashes

FIXED-IN: 4.8.1
BUG: 289287