kmmainwidget.cpp
@@ -358,7 +358,7 @@ void KMMainWidget::destruct()
     return;
   if ( mSearchWin )
     mSearchWin->close();
-  writeConfig();
+  writeConfig(false); /* don't force kmkernel sync when close BUG: 289287 */
   writeFolderConfig();
   deleteWidgets();
   delete mSystemTray;
@@ -922,7 +922,7 @@ void KMMainWidget::readConfig()
 }
 
 //-----------------------------------------------------------------------------
-void KMMainWidget::writeConfig()
+void KMMainWidget::writeConfig(bool force)
 {
   // Don't save the sizes of all the widgets when we were never shown.
   // This can happen in Kontact, where the KMail plugin is automatically
@@ -968,7 +968,7 @@ void KMMainWidget::writeConfig()
     if ( mMsgView ) {
       if ( !mReaderWindowBelow )
         GlobalSettings::self()->setReaderWindowWidth( mMsgView->width() );
-      mMsgView->viewer()->writeConfig();
+      mMsgView->viewer()->writeConfig(force);
       GlobalSettings::self()->setReaderWindowHeight( mMsgView->height() );
     }
   }
